Show book list with genre

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-stars-display": "^0.1.24",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
