--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "firebase": "^9.13.0",
     "node-sass": "^6.0.1",
-    "react": "^17.0.2",
+    "query-string": "^7.1.1",
+    "react": "^17.0.2s",
     "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "4.0.3",
     "react-stars-display": "^0.1.24",
+    "uuid": "^9.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
